--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=taskschedule
-spring.config.import=optional:file:./config/secret.properties
+spring.config.import=optional:file:./secret.properties
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
